--- a/style.css
+++ b/style.css
@@ -33,8 +33,6 @@ body{
 }
 
 .editor{
-    display: flex;
-    flex-direction: column;
     background-color: var(--light);
     width: 100%;
     height: 80%;
@@ -49,8 +47,9 @@ body{
     align-items: center;
     justify-content: center;
     width: 100%;
-    flex: 2 0 5%;
+    height: 60%;
     background-color: var(--blue);
+    position: relative;
 }
 
 .editor__file{
@@ -64,6 +63,11 @@ body{
     border-radius: 5px;
     color: var(--light);
     transition: all .5s;
+}
+
+.editor__picture{
+    width: 100%;
+    height: 100%;
 }
 
 .editor__file > p{
@@ -91,7 +95,7 @@ body{
 .editor__options{
     padding: .3rem;
     width: 100%;
-    flex: 0 0 5%;
+    height: 10%;
     display: flex;
     justify-content: center;
     background-color: var(--sky-blue);
@@ -115,13 +119,23 @@ body{
 }
 
 .editor__functions{
-    flex: 1 0 5%;
+    width: 100%;
+    height: 30%;
     background-color: var(--light-gray);
 }
 
-.editor__picture{
-    width: 100%;
-    height: 100%;
+.editor__close__image{
+    font-size: 1.6rem;
+    position: absolute;
+    right: 3%;
+    top: 3%;
+    cursor: pointer;
+    color: var(--light);
+}
+
+.editor__close__image:hover{
+    transform: rotate(90deg);
+    transition: all .5s;
 }
 
 .d-none{
