--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 .editor{
     background-color: var(--light);
     width: 100%;
-    height: 80%;
+    height: 90%;
     border-radius: 5px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     padding: .5rem;
@@ -52,6 +52,7 @@ body{
     height: 60%;
     background-color: var(--blue);
     position: relative;
+    overflow: hidden;
 }
 
 .editor__file{
@@ -122,10 +123,14 @@ body{
     background-color: var(--red);
 }
 
-.editor__functions{
+.editor__tools{
     width: 100%;
     height: 30%;
     background-color: var(--light-gray);
+}
+
+.editor__tools > i{
+    cursor: pointer;
 }
 
 .editor__close__image{
@@ -135,6 +140,7 @@ body{
     top: 3%;
     cursor: pointer;
     color: var(--light);
+    z-index: 9;
 }
 
 .editor__close__image:hover{
@@ -199,8 +205,68 @@ body{
 
 }
 
+.editor__resize__image{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.editor__rotate__controls__image{
+    display: flex;
+}
+
+.editor__arrow__button{
+    background-color: var(--blue);
+    color: var(--light);
+    padding: 10px 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+
+.fa-arrow-rotate-right{
+    margin: 0 1rem;
+}
+
+.flip__horizontal__image{
+    transform: scaleX(-1);
+}
+
 .d-none{
     display: none;
+}
+
+.active__select__image__animation{
+    animation-name: select-image-animation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes select-image-animation {
+    25%{
+        background-color: var(--light);
+        color: var(--blue);
+        
+    }
+    50%{
+        background-color: var(--red);
+        color: var(--light);
+        
+    }
+    75%{
+        background-color: var(--light);
+        color: var(--blue);
+    }
+    
+    100%{
+        background-color: var(--red);
+        color: var(--light);
+
+    }
 }
 
 
