Adding save image funcionality

--- a/style.css
+++ b/style.css
@@ -106,9 +106,6 @@ body {
     background-color: var(--sky-blue);
 }
 
-.editor__options :nth-child(2) {
-    margin: 0 1.5rem;
-}
 
 .editor__options>i {
     color: var(--blue);
@@ -116,11 +113,13 @@ body {
     font-size: 1.2rem;
     padding: .7rem;
     border-radius: 5px;
-    transition: all .5s;
+    margin-right: 1rem;
 }
 
 .editor__options>i:hover {
     background-color: var(--red);
+    color: var(--light);
+    transition: all 1s;
 }
 
 .editor__tools {
@@ -139,7 +138,7 @@ body {
     right: 3%;
     top: 3%;
     cursor: pointer;
-    color: var(--red);
+    color: var(--sky-blue);
     z-index: 9;
 }
 
